Debug/kbus-api.log
  SSH: Connecting...
  SSH: Handshaking...
  SSH: Checking key...
  SSH: Authenticating...
  note : C:\Users\JC\Documents\GitHub\kbus-api-sandbox => /tmp/VisualGDB/c/Users/JC/Documents/GitHub/kbus-api-sandbox: 1 files copied (11KB), 24 files are up-to-date.
  note : Run "make  CONFIG=Debug" in directory "/tmp/VisualGDB/c/Users/JC/Documents/GitHub/kbus-api-sandbox" on wago@192.168.27.136 (SSH)
  make  CONFIG=Debug
  /home/wago/wago/ptxproj/selected_toolchain/arm-linux-gnueabihf-gcc -std=c99 -ggdb -ffunction-sections -O0  -I/home/wago/wago/ptxproj/platform-wago-pfcXXX/sysroot-target/include -I/home/wago/wago/ptxproj/platform-wago-pfcXXX/sysroot-target/usr/include/OsLinux -I/home/wago/wago/ptxproj/platform-wago-pfcXXX/sysroot-target/usr/include -I/home/wago/wago/ptxproj/platform-wago-pfcXXX/sysroot-target/usr/include/dal -I/home/wago/wago/ptxproj/platform-wago-pfcXXX/sysroot-target/usr/include/dbus-1.0/include -I/home/wago/wago/ptxproj/platform-wago-pfcXXX/sysroot-target/usr/include/diagnostic -I/home/wago/wago/ptxproj/platform-wago-pfcXXX/sysroot-target/usr/include/ctutil -I/home/wago/wago/ptxproj/platform-wago-pfcXXX/sysroot-target/usr/include/dbus-1.0 -DDEBUG=1  -c json.c -o Debug/json.o -MD -MF Debug/json.dep
  C:\Users\JC\Documents\GitHub\kbus-api-sandbox\kbus-api.h(5): note : included from here
  C:\Users\JC\Documents\GitHub\kbus-api-sandbox\json.c(21): note : included from here
C:\Users\JC\Documents\GitHub\kbus-api-sandbox\kbus.h(30,1): warning : useless storage class specifier in empty declaration
     30 | };
        | ^
  C:\Users\JC\Documents\GitHub\kbus-api-sandbox\json.c(0): note : In function 'simple_channels_object'
C:\Users\JC\Documents\GitHub\kbus-api-sandbox\json.c(58,3): warning : implicit declaration of function ‘asprintf’; did you mean ‘vsprintf’?
     58 |   asprintf(chn, "channel%i", (channelIndex + 1));
        |   ^~~~~~~~
        |   vsprintf
C:\Users\JC\Documents\GitHub\kbus-api-sandbox\json.c(76,8): warning : passing argument 1 of ‘free’ makes pointer from integer without a cast
     76 |   free(*chn);
        |        ^~~~
        |        |
        |        char
  C:\Users\JC\Documents\GitHub\kbus-api-sandbox\json.c(17): note : included from here
  C:\Users\JC\AppData\Local\VisualGDB\RemoteSourceCache\192.168.27.136\0007\include\stdlib.h(565,25): note : expected ‘void *’ but argument is of type ‘char’
    565 | extern void free (void *__ptr) __THROW;
        |                   ~~~~~~^~~~~
  C:\Users\JC\Documents\GitHub\kbus-api-sandbox\json.c(0): note : In function 'simple_modules_object'
C:\Users\JC\Documents\GitHub\kbus-api-sandbox\json.c(113,39): error : ‘struct node’ has no member named ‘modulesmodules’
    113 |   simple_module_object(tmp, controller->modulesmodules[moduleIndex]);
        |                                       ^~
C:\Users\JC\Documents\GitHub\kbus-api-sandbox\json.c(120,8): warning : passing argument 1 of ‘free’ makes pointer from integer without a cast
    120 |   free(*mod);
        |        ^~~~
        |        |
        |        char
  C:\Users\JC\Documents\GitHub\kbus-api-sandbox\json.c(17): note : included from here
  C:\Users\JC\AppData\Local\VisualGDB\RemoteSourceCache\192.168.27.136\0007\include\stdlib.h(565,25): note : expected ‘void *’ but argument is of type ‘char’
    565 | extern void free (void *__ptr) __THROW;
        |                   ~~~~~~^~~~~
  C:\Users\JC\Documents\GitHub\kbus-api-sandbox\json.c(0): note : In function 'build_controller_object'
C:\Users\JC\Documents\GitHub\kbus-api-sandbox\json.c(159,21): warning : initialization discards ‘const’ qualifier from pointer target type
    159 |  char *jsonString = json_object_to_json_string(tmp);
        |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
  C:\Users\JC\Documents\GitHub\kbus-api-sandbox\json.c(0): note : In function 'build_event_object'
C:\Users\JC\Documents\GitHub\kbus-api-sandbox\json.c(235,87): warning : passing argument 1 of ‘json_object_new_int’ makes integer from pointer without a cast
    235 |  json_object_object_add(jsonController, "switch_state", json_object_new_int(controller.switch_state)); // faulting here?? changed this to int
        |                                                                             ~~~~~~~~~~^~~~~~~~~~~~~
        |                                                                                       |
        |                                                                                       char *
  C:\Users\JC\AppData\Local\VisualGDB\RemoteSourceCache\192.168.27.136\0005\include\json-c\linkhash.h(16): note : included from here
  C:\Users\JC\AppData\Local\VisualGDB\RemoteSourceCache\192.168.27.136\0005\include\json-c\json.h(22): note : included from here
  C:\Users\JC\Documents\GitHub\kbus-api-sandbox\json.c(20): note : included from here
  C:\Users\JC\AppData\Local\VisualGDB\RemoteSourceCache\192.168.27.136\0005\include\json-c\json_object.h(473,28): note : expected ‘int32_t’ {aka ‘int’} but argument is of type ‘char *’
    473 | extern struct json_object* json_object_new_int(int32_t i);
        |                            ^~~~~~~~~~~~~~~~~~~
C:\Users\JC\Documents\GitHub\kbus-api-sandbox\json.c(247,23): warning : initialization discards ‘const’ qualifier from pointer target type
    247 |  char *event_string = json_object_to_json_string(jsonMain);
        |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~
  C:\Users\JC\Documents\GitHub\kbus-api-sandbox\json.c(0): note : In function 'build_error_object'
C:\Users\JC\Documents\GitHub\kbus-api-sandbox\json.c(364,24): warning : initialization discards ‘const’ qualifier from pointer target type
    364 |  char *return_string = json_object_to_json_string(json_error_object);
        |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~
  make: *** [Debug/json.o] Error 1
  Makefile:249: recipe for target 'Debug/json.o' failed
  -------------------------------------------------------------
  Command exited with code 2
  Executable: make
  Arguments:  CONFIG=Debug
  Directory: /tmp/VisualGDB/c/Users/JC/Documents/GitHub/kbus-api-sandbox
EXEC : error : Command-line action failed
EXEC : error : Build has failed. See the Output window for more details.
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\Microsoft.MakeFile.Targets(45,5): error MSB3073: The command ""C:\Program Files (x86)\Sysprogs\VisualGDB\\VisualGDB.exe" /build "C:\Users\JC\Documents\GitHub\kbus-api-sandbox\kbus-api.vcxproj" "/solution:C:\Users\JC\Documents\GitHub\kbus-api-sandbox\kbus-api.sln"  "/config:Debug" "/platform:Win32"" exited with code 1.
